# DAIS_SEG

./: .env.example  .gitignore  DAIS_SEG_Improvement.md  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt  setup.py
docs/nifi-analyzer/backend/: Dockerfile  pyproject.toml
docs/nifi-analyzer/backend/app/: config.py  config_validator.py  main.py  processing_status.py
docs/nifi-analyzer/backend/app/auth/: __init__.py  api_key.py  dependencies.py  jwt_handler.py  password.py  rbac.py
docs/nifi-analyzer/backend/app/constants/: lint_rules.yaml
docs/nifi-analyzer/backend/app/db/: __init__.py  base.py  engine.py
docs/nifi-analyzer/backend/app/engines/: checkpoint_manager.py
docs/nifi-analyzer/backend/app/knowledge/: __init__.py  nifi_nel_kb.py  nifi_processor_kb.py  nifi_relationships_kb.py  nifi_services_kb.py
docs/nifi-analyzer/backend/app/middleware/: audit_middleware.py  rate_limiter.py
docs/nifi-analyzer/backend/app/models/: __init__.py  config.py  pipeline.py  processor.py
docs/nifi-analyzer/backend/app/routers/: admin.py  analyze.py  api_keys.py  assess.py  audit.py  auth.py  comments.py  compare.py  dashboard.py  export.py  export_pdf.py  favorites.py  generate.py  health.py  history.py  lineage.py  nifi_connect.py  parse.py  pipeline.py  projects.py  report.py  schedules.py  shares.py  tags.py  validate.py  versions.py  webhooks.py  ws.py
docs/nifi-analyzer/backend/app/utils/: error_classifier.py  input_validator.py  logging.py  metrics.py  sanitizer.py  streaming.py  structured_logging.py
docs/nifi-analyzer/backend/data/: etl_platform.db
docs/nifi-analyzer/backend/static/: index.html
docs/nifi-analyzer/backend/static/assets/: AdminConsole-BUVybbMM.js  AdminPage-D_qGqqhV.js  DashboardPage-DDGbfBS8.js  index-Cct8XAbO.css  (+6 more)
docs/nifi-analyzer/backend/tests/: conftest.py  test_analyzers.py  test_generators.py  test_mappers.py  test_parsers.py  test_v6_integration.py  test_validators.py
(+569 files in other folders)
